Add some styles

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
 
     <div id="outer-circle">
-        <div id="topleft"></div>
-        <div id="topright"></div>
-        <div id="bottomleft"></div>
-        <div id="bottomright"></div>
-        <div id "inner-circle">
+        <div id="topleft" class="playElem"></div>
+        <div id="topright" class="playElem"></div>
+        <div id="bottomleft" class="playElem"></div>
+        <div id="bottomright" class="playElem"></div>
+        <div id="inner-circle">
             <div id="title">SIMON!</div>
             <div id="switches">
                 <input type="checkbox" class="toggle" id="on">
