Finish html and css style

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
                 <button class="button" id="start">START</button>
                 <input type="checkbox" class="toggle" id="strict">
             </div>
-            <div class="text">
+            <div class="text1">
                 <span>POWER</span><span>STRICT</span>
             </div>
-            <div class="counter">
+            <div id="turn">12</div>
+            <div class="text2">
                 COUNT
             </div>
         </div>
