--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="text1">
                 <span>POWER</span><span>STRICT</span>
             </div>
-            <div id="turn">12</div>
+            <div id="turn"></div>
             <div class="text2">
                 COUNT
             </div>
