--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta charset="UTF-8">
     <title>Simon Game</title>
     <link rel="stylesheet" href="css/style.css">
+    <audio id="sound1">
+        <source src="sounds/simonSound1.mp3"></source>
+    </audio>
+    <audio id="sound2">
+        <source src="sounds/simonSound2.mp3"></source>
+    </audio>
+    <audio id="sound3">
+        <source src="sounds/simonSound3.mp3"></source>
+    </audio>
+    <audio id="sound4">
+        <source src="sounds/simonSound4.mp3"></source>
+    </audio>
 
 </head>
 
